--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 beautifulsoup4==4.9.3
+numpy==1.21.2
 pandas==1.2.4
+python-dateutil==2.8.2
+pytz==2021.1
+six==1.16.0
+soupsieve==2.2.1
+urllib3==1.26.6
