--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.9.3
 certifi==2021.5.30
 charset-normalizer==2.0.4
 et-xmlfile==1.1.0
+greenlet==1.1.1
 idna==3.2
 numpy==1.21.2
 openpyxl==3.0.7
@@ -11,4 +12,5 @@ pytz==2021.1
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
+SQLAlchemy==1.4.23
 urllib3==1.26.6
